# BigNum

./: CMakeLists.txt
include/: BigInt.hpp
source/: main.cpp
source/BigInt/: BigInt.cpp  operation.cpp  operatorArithmetic.cpp  print.cpp
